fix(root): upgrade nx to optimum version and this publishes to npm  (#8490)

--- a/.github/workflows/release-packages.yml
+++ b/.github/workflows/release-packages.yml
@@ -13,6 +13,11 @@ on:
         required: true
         type: string
         default: 'v3.0.0'
+      previous_tag:
+        description: 'Previous tag to generate changelog from (e.g., @novu/js@v3.4.0)'
+        required: true
+        type: string
+        default: '@novu/js@v3.4.0'
       nightly:
         description: 'Publish as nightly release'
         required: false
@@ -26,6 +31,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          fetch-tags: true
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
@@ -42,27 +48,39 @@ jobs:
 
       - name: Install Dependencies
         shell: bash
-        run: pnpm install --frozen-lockfile
+        run: |
+          pnpm install --frozen-lockfile
+          pnpm nx --version
+          pnpm list nx
 
       - name: Set version for nightly
         if: ${{ github.event.inputs.nightly }}
         run: |
-          echo "NIGHTLY_VERSION=${{ github.event.inputs.version }}-nightly.$(date +'%Y%m%d')" >> $GITHUB_ENV
+          DATE=$(date +'%Y%m%d')
+          echo "NIGHTLY_VERSION=${{ github.event.inputs.version }}-nightly.${DATE}" >> $GITHUB_ENV
+          echo "Using nightly version: $NIGHTLY_VERSION"
 
       - name: Release version
         run: |
           if [ "${{ github.event.inputs.nightly }}" = "true" ]; then
-            pnpm nx release version ${{ env.NIGHTLY_VERSION }} --projects=${{ github.event.inputs.packages }}
+            echo "Running nightly release with version: ${{ env.NIGHTLY_VERSION }}"
+            pnpm nx release version ${{ env.NIGHTLY_VERSION }} --projects=${{ github.event.inputs.packages }} --preid nightly --verbose
           else
-            pnpm nx release version ${{ github.event.inputs.version }} --projects=${{ github.event.inputs.packages }}
+            echo "Running regular release with version: ${{ github.event.inputs.version }}"
+            pnpm nx release version ${{ github.event.inputs.version }} --projects=${{ github.event.inputs.packages }} --verbose
           fi
+
+      - name: Configure Git
+        run: |
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
 
       - name: Generate changelog
         run: |
           if [ "${{ github.event.inputs.nightly }}" = "true" ]; then
-            pnpm nx release changelog ${{ env.NIGHTLY_VERSION }} --projects=${{ github.event.inputs.packages }}
+            pnpm nx release changelog ${{ env.NIGHTLY_VERSION }} --projects=${{ github.event.inputs.packages }} --from=${{ github.event.inputs.previous_tag }}
           else
-            pnpm nx release changelog ${{ github.event.inputs.version }} --projects=${{ github.event.inputs.packages }}
+            pnpm nx release changelog ${{ github.event.inputs.version }} --projects=${{ github.event.inputs.packages }} --from=${{ github.event.inputs.previous_tag }}
           fi
 
       - name: Build packages
