fix(root): bring back eslint and web app build (#8505)

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -148,6 +148,7 @@
     "@babel/preset-typescript": "^7.13.0",
     "@babel/runtime": "^7.20.13",
     "@clerk/types": "^4.30.0",
+    "@eslint/js": "^9.9.0",
     "@faker-js/faker": "^6.0.0",
     "@novu/dal": "workspace:*",
     "@novu/framework": "workspace:*",
@@ -170,6 +171,10 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/testing-library__jest-dom": "^5.14.5",
+    "eslint": "^9.9.0",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.9",
+    "globals": "^15.9.0",
     "http-server": "^0.13.0",
     "less-loader": "4.1.0",
     "react-app-rewired": "^2.2.1",
@@ -178,6 +183,7 @@
     "sinon": "9.2.4",
     "storybook": "^7.4.2",
     "typescript": "5.6.2",
+    "typescript-eslint": "^8.0.1",
     "webpack": "5.94.0",
     "webpack-bundle-analyzer": "^4.9.0",
     "webpack-dev-server": "4.11.1"
