--- a/libs/design-system/package.json
+++ b/libs/design-system/package.json
@@ -42,7 +42,7 @@
     "axios": "^1.9.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "7.43.9",
-    "react-icons": "^5.0.1",
+    "react-icons": "5.0.1",
     "react-table": "^7.8.0",
     "tslib": "^2.3.1"
   },
