--- a/libs/novui/package.json
+++ b/libs/novui/package.json
@@ -144,6 +144,6 @@
     "@tiptap/pm": "^2.6.6",
     "@tiptap/react": "^2.6.6",
     "@tiptap/suggestion": "^2.6.6",
-    "react-icons": "^5.0.1"
+    "react-icons": "5.0.1"
   }
 }
