--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "install:with-ee": "pnpm install && pnpm symlink:submodules",
     "jarvis": "node scripts/jarvis.js",
     "lint-staged": "lint-staged",
-    "lint": "nx run-many --target=lint --all",
+    "lint": "nx run-many --target=lint --all --exclude=@novu/novui,@novu/application-generic,@novu/ee-shared-services,nextjs",
     "nx": "nx",
     "packages:set-latest": "node scripts/set-package-dependencies.mjs latest",
     "packages:set-workspace-protocol": "node scripts/set-package-dependencies.mjs workspace:*",
@@ -80,7 +80,6 @@
     "@nx/plugin": "21.1.3",
     "@nx/workspace": "21.1.3",
     "@octokit/core": "^4.0.0",
-    "@pandacss/eslint-plugin": "^0.1.9",
     "@pnpm/filter-workspace-packages": "^7.0.6",
     "@pnpm/logger": "^5.0.0",
     "@swc/cli": "^0.3.12",
@@ -89,7 +88,8 @@
     "@types/inquirer": "8.2.10",
     "@types/jest": "29.5.13",
     "@types/node": "18.16.9",
-    "@typescript-eslint/eslint-plugin": "8.33.0",
+    "@typescript-eslint/eslint-plugin": "^8.13.0",
+    "@typescript-eslint/utils": "^8.13.0",
     "auto": "^10.36.5",
     "chalk": "4.1.2",
     "chalk-animation": "^1.6.0",
@@ -110,7 +110,6 @@
     "eslint-plugin-chai-friendly": "^1.0.1",
     "eslint-plugin-const-case": "^1.2.2",
     "eslint-plugin-cypress": "^3.5.0",
-    "eslint-plugin-deprecation": "^3.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-functional": "^7.0.2",
     "eslint-plugin-html": "^8.1.1",
@@ -136,9 +135,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-security": "^3.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-sonarjs": "^2.0.1",
     "eslint-plugin-spellcheck": "0.0.20",
-    "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-switch-case": "^3.0.1",
     "eslint-plugin-unicorn": "^55.0.0",
     "eslint-plugin-unused-imports": "^4.1.3",
@@ -174,7 +171,7 @@
     "ts-node": "~10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "5.6.2",
-    "typescript-eslint": "^8.33.0",
+    "typescript-eslint": "^8.13.0",
     "wait-port": "^0.3.0",
     "yargs": "^17.7.2"
   },
