--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -95,6 +95,7 @@
     "mixpanel-browser": "^2.52.0",
     "motion": "^11.12.0",
     "next-themes": "^0.3.0",
+    "prettier": "~3.3.3",
     "react": "^18.3.1",
     "react-colorful": "^5.6.1",
     "react-confetti": "^6.1.0",
@@ -129,6 +130,7 @@
     "@novu/testing": "workspace:*",
     "@playwright/test": "^1.46.1",
     "@sentry/vite-plugin": "^2.22.6",
+    "@shopify/prettier-plugin-liquid": "^1.9.3",
     "@tiptap/core": "^2.11.5",
     "@types/json-schema": "^7.0.15",
     "@types/lodash.debounce": "^4.0.9",
