fix(root): eslint errors when compiling (#8529)

--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@types/jest": "29.5.13",
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^8.13.0",
+    "@typescript-eslint/parser": "^8.13.0",
     "@typescript-eslint/utils": "^8.13.0",
     "auto": "^10.36.5",
     "chalk": "4.1.2",
