fix(dashboard): update LEGACY_DASHBOARD_URL handling and add documentation in .env.example (#8569)

--- a/docker/community/.env.example
+++ b/docker/community/.env.example
@@ -48,6 +48,7 @@ WS_PORT=3002
 # Root URL
 VITE_API_HOSTNAME=${HOST_NAME}:3000
 VITE_WEBSOCKET_HOSTNAME=${HOST_NAME}:3002
+# The VITE_LEGACY_DASHBOARD_URL must be set to the host and port of your web container.
 API_ROOT_URL=${HOST_NAME}:3000
 FRONT_BASE_URL=${HOST_NAME}:(4000|4200)
 IS_API_IDEMPOTENCY_ENABLED=false
