--- a/docker/community/docker-compose.yml
+++ b/docker/community/docker-compose.yml
@@ -168,6 +168,7 @@ services:
       VITE_API_HOSTNAME: ${VITE_API_HOSTNAME}
       VITE_SELF_HOSTED: true
       VITE_WEBSOCKET_HOSTNAME: ${VITE_WEBSOCKET_HOSTNAME}
+      VITE_LEGACY_DASHBOARD_URL: ${VITE_LEGACY_DASHBOARD_URL}
     ports:
       - 4000:4000
 
