feat(api-service): layouts content variable and preview rendering (#8580)

--- a/libs/internal-sdk/.speakeasy/gen.yaml
+++ b/libs/internal-sdk/.speakeasy/gen.yaml
@@ -17,6 +17,10 @@ generation:
     oAuth2ClientCredentialsEnabled: false
     oAuth2PasswordEnabled: false
   sdkHooksConfigAccess: true
+  tests:
+    generateTests: true
+    generateNewTests: false
+    skipResponseBodyAssertions: false
 typescript:
   version: 0.1.21
   additionalDependencies:
