--- a/package.json
+++ b/package.json
@@ -73,12 +73,12 @@
     "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.9.1",
-    "@nx/eslint": "21.1.3",
-    "@nx/eslint-plugin": "21.1.3",
-    "@nx/jest": "21.1.3",
-    "@nx/js": "^21.1.3",
-    "@nx/plugin": "21.1.3",
-    "@nx/workspace": "21.1.3",
+    "@nx/eslint": "21.2.1",
+    "@nx/eslint-plugin": "21.2.1",
+    "@nx/jest": "21.2.1",
+    "@nx/js": "21.2.1",
+    "@nx/plugin": "21.2.1",
+    "@nx/workspace": "21.2.1",
     "@octokit/core": "^4.0.0",
     "@pnpm/filter-workspace-packages": "^7.0.6",
     "@pnpm/logger": "^5.0.0",
@@ -156,8 +156,8 @@
     "markdownlint-cli": "^0.33.0",
     "meow": "^10.1.3",
     "mississippi": "^4.0.0",
-    "nx": "^21.1.3",
-    "nx-cloud": "^19.1.0",
+    "nx": "21.2.1",
+    "nx-cloud": "19.1.0",
     "ora": "~5.4.1",
     "pkg-pr-new": "^0.0.24",
     "pnpm": "10.11.0",
